--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,9 +2,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    /* overflow-x: hidden; */
+    
 }
 
 html{
+  overflow: hidden;
    
     font-family: 'Lato';
     font-size: 120%;
@@ -17,6 +20,10 @@ html{
     margin: 0 auto;
 }
 
+header, section, footer{
+  overflow: hidden;
+}
+
 header{
      background-color: white;
     background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),url('img/header food.jpg');
@@ -25,6 +32,7 @@ header{
     height: 100vh;
     background-size: cover;
     background-position: center;
+    overflow: hidden;
 }
 
 .main-nav li:hover{
@@ -46,9 +54,9 @@ h1{
     
     position: absolute;
     width: 100%;
-    top: 50%;
-    left: 5%;
-    transform: translateY(-50%, -50%);
+    top: 60%;
+    /* left: 5%; */
+    transform: translateY(-50%);
     
 }
 
